added images in background
